feat: update docker-compose and fix frontend icon import

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -100,13 +100,17 @@ services:
 
   # Frontend
   delivery-frontend:
-    image: waynerramos/delivery-frontend
+    build:
+      context: ./SIMULATOR/drivers/simulator/frontend
+      dockerfile: Dockerfile
+      args:
+        - REACT_APP_GOOGLE_MAPS_API_KEY=${REACT_APP_GOOGLE_MAPS_API_KEY}
     container_name: delivery-frontend
     depends_on:
       - delivery-drivers-api
     environment:
       - REACT_APP_GOOGLE_MAPS_API_KEY=${REACT_APP_GOOGLE_MAPS_API_KEY}
-      - REACT_APP_API_URL=http://localhost:${APP_PORT}
+      - REACT_APP_API_URL=http://delivery-drivers-api:${APP_PORT}
     ports:
       - "3000:80"
     networks:
